--- a/server/package.json
+++ b/server/package.json
@@ -7,5 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "node-cache": "^5.1.2",
+    "open": "^7.0.4",
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.8"
+  }
 }
